--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.container{
+max-width: 350px;
+max-height: 1000px;
+margin: 0 auto;
+background-color:white;
+box-shadow: 0 0 5px gray;
+margin-top: 50px;
+padding-bottom: 20px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.balance{
+    padding-left: 15px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.income-expense-container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  background-color: rgb(236, 206, 160);
+  box-shadow: 0 0 3px rgb(241, 213, 222);
 }
-
-.App-link {
-  color: #61dafb;
+.transaction-class{
+    padding-left: 15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.transaction input{
+    width:90%;
+    margin-top: 10px;
+    padding:5px 0;
+    
+}
+.history{
+    padding-left: 15px;
+}
+li plus{
+    border-top: green;
+}
+li minus{
+    border-color: red;
 }
